Add API to get user by username
